unix/lang/tests/error/error_line_number_import.yab
#expect#---Error in library4e.yab, line 1: syntax error
#expect#   a = b$
#expect#         ^
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed

import library4e // contains a simple syntax error
